[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/PreviewPanel/PreviewPanel.gd" type="Script" id=1]
[ext_resource path="res://scenes/PreviewPanel/UpgradePreview.gd" type="Script" id=2]
[ext_resource path="res://sprites/res/base_font_8.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[node name="PreviewPanel" type="MarginContainer"]
anchor_top = 0.333333
anchor_right = 0.275
anchor_bottom = 0.666667
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="."]
margin_right = 176.0
margin_bottom = 120.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_right = 176.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 172.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 34.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 8
custom_constants/margin_bottom = 40

[node name="UpgradePreview" type="Panel" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
margin_top = 8.0
margin_right = 34.0
margin_bottom = 44.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/UpgradePreview"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 38.0
margin_right = 168.0
margin_bottom = 84.0
rect_min_size = Vector2( 130, 0 )
size_flags_horizontal = 7
size_flags_vertical = 7
custom_constants/margin_right = 2
custom_constants/margin_top = 4
custom_constants/margin_left = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer2"]
margin_left = 2.0
margin_top = 4.0
margin_right = 128.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 3 )
text = "Machine Gun

Damage: 1
Fire rate: 1 ms
Crit. chance: 100%
Prod. time: 14 ms"
autowrap = true

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_top = 92.0
margin_right = 176.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 9
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="Button" type="Button" parent="Panel/VBoxContainer/MarginContainer2"]
margin_left = 4.0
margin_top = 4.0
margin_right = 172.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 8
text = "Install"
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="on_data_dropped" from="Panel/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/UpgradePreview" to="." method="_on_UpgradePreview_on_data_dropped"]
[connection signal="button_up" from="Panel/VBoxContainer/MarginContainer2/Button" to="." method="_on_Button_button_up"]
